--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "gulp": "^4.0.2",
         "jquery": "^3.2",
+        "jquery-ui": "^1.12.1",
+        "laravel-elixir": "^6.0.0-18",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
@@ -22,5 +25,6 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
-    }
+    },
+    "dependencies": {}
 }
