--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "font-awesome": "^4.7.0",
         "gulp": "^4.0.2",
         "jquery": "^3.2",
         "jquery-ui": "^1.12.1",
